<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<!-- 标题 -->
    <RelativeLayout
        android:id="@+id/titleLayout"
        style="@style/left_top_style"
        >
        <EditText
            android:id="@+id/memberPayCardNoEdit"
            android:layout_width="400dp"
            android:layout_height="90dp"
            android:hint="@string/input_phone_or_name"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:background="@drawable/search_area"
        	android:textColorHint="#C7C7C7"
        	android:paddingLeft="80dp"
        	android:paddingRight="40dp"
            />
        <TextView
            android:id="@+id/balanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            />
    </RelativeLayout>
    
    <TableLayout
        android:id="@+id/memberInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLayout"
        android:stretchColumns="*"
        android:background="#E0E0E0"
        >
        <TableRow
            >
            <TextView
                android:text="@string/membership_name"
                style="@style/mamber_pay_text"
                />
            <TextView
                android:text="@string/membership_card_no"
                style="@style/mamber_pay_text"
                />
        </TableRow>
        <TableRow
            >
            <TextView
                android:text="@string/membership_phone_no"
                style="@style/mamber_pay_text"
                />
            <TextView
                android:text="@string/membership_card_balance"
                style="@style/mamber_pay_text"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>