<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/catalog_bg"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/usrmg_right_layout"
        android:layout_width="fill_parent"
        android:layout_height="95dp"
        android:background="@drawable/catalog_top"
        android:padding="0dp" >

        <Button
            android:id="@+id/addUserButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_roundconer_selector"
            android:gravity="center"
            android:text="@string/add_account"
            android:textColor="@color/text_normal_color"
            android:textSize="30sp"
            android:visibility="visible" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/usrmg_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/usrmg_right_layout" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
			<!-- 用户名，即手机号 -->
            <TextView
                android:id="@+id/add_phone"
                style="@style/user_manager_edittext"
                android:hint="@string/input_phoneno"
                android:textSize="25sp"
                android:textColor="@color/text_normal_color"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                />

            <TextView
                android:id="@+id/usrmg_name_textview"
                style="@style/user_manager_textview"
                android:layout_alignBaseline="@+id/add_phone"
                android:layout_alignBottom="@+id/add_phone"
                android:text="@string/phone_number" />
			<!-- 姓氏 First Name -->
            <EditText
                android:id="@+id/add_first_name"
                style="@style/user_manager_edittext"
                android:layout_alignLeft="@id/add_phone"
                android:layout_alignRight="@id/add_phone"
                android:layout_below="@id/add_phone"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="16"
                android:hint="@string/last_name_hint" />

            <TextView
                android:id="@+id/usrmg_wholename_textview"
                style="@style/user_manager_textview"
                android:layout_alignBaseline="@+id/add_first_name"
                android:layout_alignBottom="@+id/add_first_name"
                android:text="@string/last_name" />
			<!-- 名字 Last Name -->
            <EditText
                android:id="@+id/add_last_name"
                style="@style/user_manager_edittext"
                android:layout_alignLeft="@id/add_first_name"
                android:layout_alignRight="@id/add_first_name"
                android:layout_below="@id/add_first_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="16"
                android:hint="@string/first_name_hint" />

            <TextView
                android:id="@+id/add_last_name_textview"
                style="@style/user_manager_textview"
                android:layout_alignBaseline="@+id/add_last_name"
                android:layout_alignBottom="@+id/add_last_name"
                android:text="@string/first_name" />
            <!-- 密码 -->
            <EditText
                android:id="@+id/add_password"
                style="@style/user_manager_edittext"
                android:layout_alignLeft="@id/add_last_name"
                android:layout_alignRight="@id/add_last_name"
                android:layout_below="@id/add_last_name"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/psw_lenth_hint" />

            <TextView
                android:id="@+id/add_password_textview"
                style="@style/user_manager_textview"
                android:layout_alignBaseline="@+id/add_password"
                android:layout_alignBottom="@+id/add_password"
                android:text="@string/pass_hint" />
            <!-- 确认密码 -->
            <EditText
                android:id="@+id/add_password_check"
                style="@style/user_manager_edittext"
                android:layout_alignLeft="@id/add_password"
                android:layout_alignRight="@id/add_password"
                android:layout_below="@id/add_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/psw_lenth_hint" />

            <TextView
                android:id="@+id/add_password_check_textview"
                style="@style/user_manager_textview"
                android:layout_alignBaseline="@+id/add_password_check"
                android:layout_alignBottom="@+id/add_password_check"
                android:text="@string/check_password" />
            
            <Spinner
                android:id="@+id/add_privilege"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@id/add_password_check"
                android:layout_alignParentRight="true"
                android:layout_alignRight="@id/add_password_check"
                android:layout_below="@id/add_password_check"
                android:layout_marginRight="24dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_roundconer_selector"
                android:drawSelectorOnTop="true"
                android:prompt="@string/accounts" />

            <TextView
                android:id="@+id/usrmg_spinner_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/add_privilege"
                android:layout_alignBottom="@+id/add_privilege"
                android:layout_marginLeft="24dp"
                android:text="@string/property_set"
                android:textSize="25sp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>