<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginUpdateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/checkupdate_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/unkown"
        android:src="@drawable/kivvi" />

    <RelativeLayout
        android:id="@+id/checkupdate_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkupdate_imageview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" >

        <TextView
            android:id="@+id/checkupdate_text"
            style="@style/update_merchant_textview"
            android:text="@string/checkout_version" />

        <TextView
            android:id="@+id/checkupdate_text_show"
            style="@style/update_merchant_textview"
            android:layout_alignTop="@id/checkupdate_text"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/checkupdate_text"
            android:text="@string/unkown" />

        <TextView
            android:id="@+id/checkupdate_time"
            style="@style/update_merchant_textview"
            android:layout_alignLeft="@id/checkupdate_text"
            android:layout_below="@id/checkupdate_text"
            android:layout_marginTop="20dp"
            android:text="@string/checkout_time" />

        <TextView
            android:id="@+id/checkupdate_time_show"
            style="@style/update_merchant_textview"
            android:layout_alignTop="@id/checkupdate_time"
            android:layout_below="@id/checkupdate_text_show"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/checkupdate_time"
            android:text="@string/checkupdate_message" />
    </RelativeLayout>

    <Button
        android:id="@+id/checkupdate_btn"
        style="@style/update_merchant_textview"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkupdate_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg_xml"
        android:text="@string/check_update"
        android:textColor="#fff"
        android:textSize="25sp" />

</RelativeLayout>